src/test/ui/span/borrowck-call-is-borrow-issue-12224.stderr
error[E0499]: cannot borrow `f` as mutable more than once at a time
  --> $DIR/borrowck-call-is-borrow-issue-12224.rs:12:16
   |
LL |     f(Box::new(|| {
   |     -          ^^ second mutable borrow occurs here
   |     |
   |     first mutable borrow occurs here
LL |
LL |         f((Box::new(|| {})))
   |         - borrow occurs due to use of `f` in closure
LL |     }));
   |       - first borrow ends here

error[E0596]: cannot borrow immutable borrowed content `*f` as mutable
  --> $DIR/borrowck-call-is-borrow-issue-12224.rs:25:5
   |
LL | fn test2<F>(f: &F) where F: FnMut() {
   |                -- use `&mut F` here to make mutable
LL |     (*f)();
   |     ^^^^ cannot borrow as mutable

error[E0596]: cannot borrow field `f.f` of immutable binding as mutable
  --> $DIR/borrowck-call-is-borrow-issue-12224.rs:34:5
   |
LL | fn test4(f: &Test) {
   |             ----- use `&mut Test` here to make mutable
LL |     f.f.call_mut(())
   |     ^^^ cannot mutably borrow field of immutable binding

error[E0504]: cannot move `f` into closure because it is borrowed
  --> $DIR/borrowck-call-is-borrow-issue-12224.rs:56:13
   |
LL |     f(Box::new(|a| {
   |     - borrow of `f` occurs here
LL |         foo(f);
   |             ^ move into closure occurs here

error[E0507]: cannot move out of captured outer variable in an `FnMut` closure
  --> $DIR/borrowck-call-is-borrow-issue-12224.rs:56:13
   |
LL |     let mut f = move |g: Box<FnMut(isize)>, b: isize| {
   |         ----- captured outer variable
...
LL |         foo(f);
   |             ^ cannot move out of captured outer variable in an `FnMut` closure

error: aborting due to 5 previous errors

Some errors occurred: E0499, E0504, E0507, E0596.
For more information about an error, try `rustc --explain E0499`.
